--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "i18next": "^23.11.2",
     "react": "18.2.0",
+    "react-i18next": "^14.1.1",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-reanimated": "^3.8.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-simple-radio-button": "^2.7.4",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.2.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
